--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
         "network": "ws",
         "security": "tls",
         "tlsSettings": {
-          "serverName": "m.googleapis.com"
+          "serverName": "${domain}"
         },
         "wsSettings": {
           "path": "/vless"
